--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ input[type=submit]:hover {
       
       <div class="modal-body">
           <img src="logo.png" style="margin-bottom: 21px; margin-top: 13px; width: 150px; display: block; margin-left: auto; margin-right: auto;" alt="">
-        <form action="create.php" method="post" >
+        <form action="https://api.aadyashainfotech.com/create.php" method="post" >
           <div class="mb-3">
             <input type="text" class="form-control" placeholder="Mobile Number" name="mbid" id="recipient-name">
           </div>
