--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ padding: 1px;" src="v.mp4" ></video>
   <div class="modal-dialog">
     <div class="modal-content">
       
-      <div class="modal-body">
+      <div class="modal-body" style="border-radius: 12px;">
           <img src="logo.png" style="margin-bottom: 21px; margin-top: 13px; width: 150px; display: block; margin-left: auto; margin-right: auto;" alt="">
         <form action="https://api.aadyashainfotech.com/create.php" method="post" >
           <div class="mb-3">
