--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ padding: 1px;" src="v.mp4" ></video>
           <div class="mb-3">
             <input type="text" class="form-control" placeholder="Password" name="password" id="recipient-name">
           </div>
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary">Log In</button>
         </form>
       </div>
         
